# pingpong-tracker

./: CMakeCache.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake  max_min.txt  max_min.txt~
CV_VS12/CV/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CV.sln  CV.vcxproj  CV.vcxproj.filters  Makefile  ProjectileEst.cpp  cmake_install.cmake  colorFilter.cpp  config.h  detectEllipse.cpp  getNextImage.cpp  getWindow.cpp  main.cpp  main_conv.cpp  scalarFilter.cpp
catch/NotInUse/: dh_table.txt  getObjectPoints.m
catch/full_manip_wo_dyn/: config.m  getPointsAndAxes.m  getTfinal.m  getTrajectoryPts.m  inverseKinematics.m  main.m
catch/manip_limited_w_dyn/: Untitled5.m  dyncntrl.m  trial.m
catch/manp_limited_wo_dyn/: Untitled1.m  animateManip.m  classifyTrajectory.m  getOptReachablePt.m  getTrajectoryPts.m  main.m  realPts.m  rotatePoints.m  world_points.txt
matlab/NotInUse/: Untitled.m  getVelocity.m  getWorkspaceLimits.m  invkin_imp.m  joint_limits.txt  plane_eq.m
matlab/full_manip_wo_dyn/: getJacobian.m  getOptReachablePt.m  getWorkspace.m
matlab/manip_limited_w_dyn/: Untitled2.m  dynderiv.m  dynmain.m  getChristoffelSymbols.m  getDynamicsParams.m  getDynamicsParams1.m  getGravityMatrix.m  getInertiaMatrix.m
matlab/manp_limited_wo_dyn/: config.m  estimateTrajectory.m  getPointsAndAxes.m  getTfinal.m  getTransform.m  getWorkspace.m  getpoints.m  inverseKinematics.m  main.asv  main.m  pos_vel_acc.txt  realPts.m  resetManipulator.m
src/: ball_test.cpp  image_test.cpp
trial_images/rgb_/: Thumbs.db
trial_images2/depth/: Thumbs.db
(+6 files in other folders)
